--- a/style.css
+++ b/style.css
@@ -76,9 +76,9 @@ a {
     https://www.w3schools.com/howto/howto_css_parallax.asp
      */
     background-image: url('assets/bikeRide4.png');
-    height: 60%;
+    height: 70%;
     background-attachment: fixed;
-    background-position: center; 
+    /* background-position: center;  */
     background-position: 50% 100%; 
     background-repeat: no-repeat;
     background-size: cover; 
